src/grammar/cpp/HuntersParser.cpp

// Generated from Hunters.g4 by ANTLR 4.7.1


#include "HuntersListener.h"

#include "HuntersParser.h"


using namespace antlrcpp;
using namespace antlr4;

HuntersParser::HuntersParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

HuntersParser::~HuntersParser() {
  delete _interpreter;
}

std::string HuntersParser::getGrammarFileName() const {
  return "Hunters.g4";
}

const std::vector<std::string>& HuntersParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& HuntersParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- MainContext ------------------------------------------------------------------

HuntersParser::MainContext::MainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HuntersParser::ExprContext* HuntersParser::MainContext::expr() {
  return getRuleContext<HuntersParser::ExprContext>(0);
}


size_t HuntersParser::MainContext::getRuleIndex() const {
  return HuntersParser::RuleMain;
}

void HuntersParser::MainContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMain(this);
}

void HuntersParser::MainContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMain(this);
}

HuntersParser::MainContext* HuntersParser::main() {
  MainContext *_localctx = _tracker.createInstance<MainContext>(_ctx, getState());
  enterRule(_localctx, 0, HuntersParser::RuleMain);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(26);
    expr();
    setState(27);
    match(HuntersParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

HuntersParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HuntersParser::QueryContext *> HuntersParser::ExprContext::query() {
  return getRuleContexts<HuntersParser::QueryContext>();
}

HuntersParser::QueryContext* HuntersParser::ExprContext::query(size_t i) {
  return getRuleContext<HuntersParser::QueryContext>(i);
}

std::vector<HuntersParser::CommandContext *> HuntersParser::ExprContext::command() {
  return getRuleContexts<HuntersParser::CommandContext>();
}

HuntersParser::CommandContext* HuntersParser::ExprContext::command(size_t i) {
  return getRuleContext<HuntersParser::CommandContext>(i);
}

std::vector<HuntersParser::ChatContext *> HuntersParser::ExprContext::chat() {
  return getRuleContexts<HuntersParser::ChatContext>();
}

HuntersParser::ChatContext* HuntersParser::ExprContext::chat(size_t i) {
  return getRuleContext<HuntersParser::ChatContext>(i);
}


size_t HuntersParser::ExprContext::getRuleIndex() const {
  return HuntersParser::RuleExpr;
}

void HuntersParser::ExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr(this);
}

void HuntersParser::ExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr(this);
}

HuntersParser::ExprContext* HuntersParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 2, HuntersParser::RuleExpr);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << HuntersParser::QS)
      | (1ULL << HuntersParser::CS)
      | (1ULL << HuntersParser::HUNT)
      | (1ULL << HuntersParser::TELL)
      | (1ULL << HuntersParser::CHAS))) != 0)) {
      setState(32);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case HuntersParser::QS: {
          setState(29);
          query();
          break;
        }

        case HuntersParser::CS:
        case HuntersParser::HUNT: {
          setState(30);
          command();
          break;
        }

        case HuntersParser::TELL:
        case HuntersParser::CHAS: {
          setState(31);
          chat();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(36);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QueryContext ------------------------------------------------------------------

HuntersParser::QueryContext::QueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HuntersParser::QueryContext::QS() {
  return getToken(HuntersParser::QS, 0);
}

HuntersParser::DestinationContext* HuntersParser::QueryContext::destination() {
  return getRuleContext<HuntersParser::DestinationContext>(0);
}

std::vector<HuntersParser::ArgContext *> HuntersParser::QueryContext::arg() {
  return getRuleContexts<HuntersParser::ArgContext>();
}

HuntersParser::ArgContext* HuntersParser::QueryContext::arg(size_t i) {
  return getRuleContext<HuntersParser::ArgContext>(i);
}


size_t HuntersParser::QueryContext::getRuleIndex() const {
  return HuntersParser::RuleQuery;
}

void HuntersParser::QueryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuery(this);
}

void HuntersParser::QueryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuery(this);
}

HuntersParser::QueryContext* HuntersParser::query() {
  QueryContext *_localctx = _tracker.createInstance<QueryContext>(_ctx, getState());
  enterRule(_localctx, 4, HuntersParser::RuleQuery);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37);
    match(HuntersParser::QS);
    setState(38);
    destination();
    setState(42);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HuntersParser::T__1) {
      setState(39);
      arg();
      setState(44);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommandContext ------------------------------------------------------------------

HuntersParser::CommandContext::CommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HuntersParser::CommandContext::CS() {
  return getToken(HuntersParser::CS, 0);
}

HuntersParser::DestinationContext* HuntersParser::CommandContext::destination() {
  return getRuleContext<HuntersParser::DestinationContext>(0);
}

std::vector<HuntersParser::ArgContext *> HuntersParser::CommandContext::arg() {
  return getRuleContexts<HuntersParser::ArgContext>();
}

HuntersParser::ArgContext* HuntersParser::CommandContext::arg(size_t i) {
  return getRuleContext<HuntersParser::ArgContext>(i);
}

tree::TerminalNode* HuntersParser::CommandContext::HUNT() {
  return getToken(HuntersParser::HUNT, 0);
}


size_t HuntersParser::CommandContext::getRuleIndex() const {
  return HuntersParser::RuleCommand;
}

void HuntersParser::CommandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCommand(this);
}

void HuntersParser::CommandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCommand(this);
}

HuntersParser::CommandContext* HuntersParser::command() {
  CommandContext *_localctx = _tracker.createInstance<CommandContext>(_ctx, getState());
  enterRule(_localctx, 6, HuntersParser::RuleCommand);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(54);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HuntersParser::CS: {
        enterOuterAlt(_localctx, 1);
        setState(45);
        match(HuntersParser::CS);
        setState(46);
        destination();
        setState(50);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == HuntersParser::T__1) {
          setState(47);
          arg();
          setState(52);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

      case HuntersParser::HUNT: {
        enterOuterAlt(_localctx, 2);
        setState(53);
        match(HuntersParser::HUNT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DestinationContext ------------------------------------------------------------------

HuntersParser::DestinationContext::DestinationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HuntersParser::DestinationContext::STRING() {
  return getToken(HuntersParser::STRING, 0);
}


size_t HuntersParser::DestinationContext::getRuleIndex() const {
  return HuntersParser::RuleDestination;
}

void HuntersParser::DestinationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDestination(this);
}

void HuntersParser::DestinationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDestination(this);
}

HuntersParser::DestinationContext* HuntersParser::destination() {
  DestinationContext *_localctx = _tracker.createInstance<DestinationContext>(_ctx, getState());
  enterRule(_localctx, 8, HuntersParser::RuleDestination);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(HuntersParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChatContext ------------------------------------------------------------------

HuntersParser::ChatContext::ChatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HuntersParser::ChatContext::CHAS() {
  return getToken(HuntersParser::CHAS, 0);
}

std::vector<HuntersParser::WordsContext *> HuntersParser::ChatContext::words() {
  return getRuleContexts<HuntersParser::WordsContext>();
}

HuntersParser::WordsContext* HuntersParser::ChatContext::words(size_t i) {
  return getRuleContext<HuntersParser::WordsContext>(i);
}

tree::TerminalNode* HuntersParser::ChatContext::TELL() {
  return getToken(HuntersParser::TELL, 0);
}

HuntersParser::DestinationContext* HuntersParser::ChatContext::destination() {
  return getRuleContext<HuntersParser::DestinationContext>(0);
}


size_t HuntersParser::ChatContext::getRuleIndex() const {
  return HuntersParser::RuleChat;
}

void HuntersParser::ChatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChat(this);
}

void HuntersParser::ChatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChat(this);
}

HuntersParser::ChatContext* HuntersParser::chat() {
  ChatContext *_localctx = _tracker.createInstance<ChatContext>(_ctx, getState());
  enterRule(_localctx, 10, HuntersParser::RuleChat);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(71);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HuntersParser::CHAS: {
        enterOuterAlt(_localctx, 1);
        setState(58);
        match(HuntersParser::CHAS);
        setState(60); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(59);
          words();
          setState(62); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == HuntersParser::STRING);
        break;
      }

      case HuntersParser::TELL: {
        enterOuterAlt(_localctx, 2);
        setState(64);
        match(HuntersParser::TELL);
        setState(65);
        destination();
        setState(67); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(66);
          words();
          setState(69); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == HuntersParser::STRING);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WordsContext ------------------------------------------------------------------

HuntersParser::WordsContext::WordsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HuntersParser::WordsContext::STRING() {
  return getToken(HuntersParser::STRING, 0);
}

std::vector<HuntersParser::WordsContext *> HuntersParser::WordsContext::words() {
  return getRuleContexts<HuntersParser::WordsContext>();
}

HuntersParser::WordsContext* HuntersParser::WordsContext::words(size_t i) {
  return getRuleContext<HuntersParser::WordsContext>(i);
}


size_t HuntersParser::WordsContext::getRuleIndex() const {
  return HuntersParser::RuleWords;
}

void HuntersParser::WordsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWords(this);
}

void HuntersParser::WordsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWords(this);
}

HuntersParser::WordsContext* HuntersParser::words() {
  WordsContext *_localctx = _tracker.createInstance<WordsContext>(_ctx, getState());
  enterRule(_localctx, 12, HuntersParser::RuleWords);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(73);
    match(HuntersParser::STRING);
    setState(77);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(74);
        words(); 
      }
      setState(79);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgContext ------------------------------------------------------------------

HuntersParser::ArgContext::ArgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HuntersParser::QualifierContext* HuntersParser::ArgContext::qualifier() {
  return getRuleContext<HuntersParser::QualifierContext>(0);
}

HuntersParser::ArgContext* HuntersParser::ArgContext::arg() {
  return getRuleContext<HuntersParser::ArgContext>(0);
}


size_t HuntersParser::ArgContext::getRuleIndex() const {
  return HuntersParser::RuleArg;
}

void HuntersParser::ArgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArg(this);
}

void HuntersParser::ArgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArg(this);
}

HuntersParser::ArgContext* HuntersParser::arg() {
  ArgContext *_localctx = _tracker.createInstance<ArgContext>(_ctx, getState());
  enterRule(_localctx, 14, HuntersParser::RuleArg);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    match(HuntersParser::T__1);
    setState(81);
    qualifier();
    setState(83);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      setState(82);
      arg();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QualifierContext ------------------------------------------------------------------

HuntersParser::QualifierContext::QualifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HuntersParser::ComparisonContext* HuntersParser::QualifierContext::comparison() {
  return getRuleContext<HuntersParser::ComparisonContext>(0);
}

HuntersParser::SlotContext* HuntersParser::QualifierContext::slot() {
  return getRuleContext<HuntersParser::SlotContext>(0);
}

tree::TerminalNode* HuntersParser::QualifierContext::INT() {
  return getToken(HuntersParser::INT, 0);
}


size_t HuntersParser::QualifierContext::getRuleIndex() const {
  return HuntersParser::RuleQualifier;
}

void HuntersParser::QualifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQualifier(this);
}

void HuntersParser::QualifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQualifier(this);
}

HuntersParser::QualifierContext* HuntersParser::qualifier() {
  QualifierContext *_localctx = _tracker.createInstance<QualifierContext>(_ctx, getState());
  enterRule(_localctx, 16, HuntersParser::RuleQualifier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HuntersParser::T__14:
      case HuntersParser::T__15:
      case HuntersParser::T__16:
      case HuntersParser::T__17:
      case HuntersParser::T__18:
      case HuntersParser::T__19:
      case HuntersParser::T__20:
      case HuntersParser::T__21:
      case HuntersParser::T__22:
      case HuntersParser::T__23:
      case HuntersParser::T__24:
      case HuntersParser::T__25:
      case HuntersParser::STRING: {
        setState(85);
        comparison();
        break;
      }

      case HuntersParser::T__2:
      case HuntersParser::T__3:
      case HuntersParser::T__4:
      case HuntersParser::T__5:
      case HuntersParser::T__6:
      case HuntersParser::T__7:
      case HuntersParser::T__8:
      case HuntersParser::T__9:
      case HuntersParser::T__10:
      case HuntersParser::T__11:
      case HuntersParser::T__12:
      case HuntersParser::T__13: {
        setState(86);
        slot();
        break;
      }

      case HuntersParser::INT: {
        setState(87);
        match(HuntersParser::INT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SlotContext ------------------------------------------------------------------

HuntersParser::SlotContext::SlotContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HuntersParser::SlotContext::getRuleIndex() const {
  return HuntersParser::RuleSlot;
}

void HuntersParser::SlotContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSlot(this);
}

void HuntersParser::SlotContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSlot(this);
}

HuntersParser::SlotContext* HuntersParser::slot() {
  SlotContext *_localctx = _tracker.createInstance<SlotContext>(_ctx, getState());
  enterRule(_localctx, 18, HuntersParser::RuleSlot);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << HuntersParser::T__2)
      | (1ULL << HuntersParser::T__3)
      | (1ULL << HuntersParser::T__4)
      | (1ULL << HuntersParser::T__5)
      | (1ULL << HuntersParser::T__6)
      | (1ULL << HuntersParser::T__7)
      | (1ULL << HuntersParser::T__8)
      | (1ULL << HuntersParser::T__9)
      | (1ULL << HuntersParser::T__10)
      | (1ULL << HuntersParser::T__11)
      | (1ULL << HuntersParser::T__12)
      | (1ULL << HuntersParser::T__13))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComparisonContext ------------------------------------------------------------------

HuntersParser::ComparisonContext::ComparisonContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HuntersParser::StatContext* HuntersParser::ComparisonContext::stat() {
  return getRuleContext<HuntersParser::StatContext>(0);
}

tree::TerminalNode* HuntersParser::ComparisonContext::CMP() {
  return getToken(HuntersParser::CMP, 0);
}

tree::TerminalNode* HuntersParser::ComparisonContext::INT() {
  return getToken(HuntersParser::INT, 0);
}

tree::TerminalNode* HuntersParser::ComparisonContext::EQ() {
  return getToken(HuntersParser::EQ, 0);
}

HuntersParser::RangeContext* HuntersParser::ComparisonContext::range() {
  return getRuleContext<HuntersParser::RangeContext>(0);
}

std::vector<tree::TerminalNode *> HuntersParser::ComparisonContext::STRING() {
  return getTokens(HuntersParser::STRING);
}

tree::TerminalNode* HuntersParser::ComparisonContext::STRING(size_t i) {
  return getToken(HuntersParser::STRING, i);
}


size_t HuntersParser::ComparisonContext::getRuleIndex() const {
  return HuntersParser::RuleComparison;
}

void HuntersParser::ComparisonContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComparison(this);
}

void HuntersParser::ComparisonContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComparison(this);
}

HuntersParser::ComparisonContext* HuntersParser::comparison() {
  ComparisonContext *_localctx = _tracker.createInstance<ComparisonContext>(_ctx, getState());
  enterRule(_localctx, 20, HuntersParser::RuleComparison);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(107);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(92);
      stat();
      setState(93);
      match(HuntersParser::CMP);
      setState(94);
      match(HuntersParser::INT);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(96);
      stat();
      setState(97);
      match(HuntersParser::EQ);
      setState(98);
      match(HuntersParser::INT);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(100);
      stat();
      setState(101);
      match(HuntersParser::EQ);
      setState(102);
      range();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(104);
      match(HuntersParser::STRING);
      setState(105);
      match(HuntersParser::EQ);
      setState(106);
      match(HuntersParser::STRING);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

HuntersParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HuntersParser::StatContext::getRuleIndex() const {
  return HuntersParser::RuleStat;
}

void HuntersParser::StatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStat(this);
}

void HuntersParser::StatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HuntersListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStat(this);
}
